--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         </div>
                     </div> -->
 
-                    <div class="qualification__content">
+                    <div class="qualification__content container">
                         <h2 class="qualification__title">
                             <i class='bx bx-book-bookmark qualification__title-icon'></i>
                             Education
